--- a/assets/css/computer.css
+++ b/assets/css/computer.css
@@ -1,15 +1,15 @@
 @import url('root.css');
 
 .ibm-frame.fullscreen {
-    width: 100vw;
-    height: 100vh;
+    width: calc(min(100vw, 100vh) - 50px);
+    height: calc(min(100vw, 100vh) - 50px);
     border: none;
     box-shadow: none;
     transition: width 0.5s ease, height 0.5s ease, border-radius 0.5s ease, box-shadow 0.5s ease;
 }
 
 .ibm-screen.fullscreen {
-    height: calc(100vh - 150px);
+    height: calc(100% - 150px);
     margin: 20px 20px 0 20px;
     border-radius: 15px;
     box-shadow: inset 0px 0px 10px 5px #000;
