--- a/assets/css/windows.css
+++ b/assets/css/windows.css
@@ -239,7 +239,8 @@ body {
 
 .desktop-icon-text {
     color: white;
-    font-size: 12px;
+    font-si
+    e: 12px;
     margin-top: 5px;
     margin-bottom: 0;
 }
