--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,36 @@ main {
   background: #008080;
 }
 
+.text__underline {
+  text-decoration: underline;
+  color: black;
+}
+
+.window__x__btn {
+  cursor: pointer;
+  background-color: #c0c0c0;
+  border-top: 2px solid #deebf3;
+  border-left: 2px solid #deebf3;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  color: black;
+  position: relative;
+  transition: top 0.1s ease, left 0.1s ease;
+}
+.window__x__btn:active {
+  border-top: 3px solid black;
+  border-left: 3px solid black;
+  border-bottom: 2px solid white;
+  border-right: 2px solid white;
+}
+
 .desktop {
-  height: calc(100vh - 60px);
+  position: relative;
+  height: calc(100vh - 50px);
 }
 .desktop .desktop__shortcut {
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -30,11 +54,12 @@ main {
 }
 .desktop .desktop__shortcut .desktop__shortcut__name {
   cursor: pointer;
+  font-size: 0.9rem;
 }
 
 .taskbar {
   display: flex;
-  height: 60px;
+  height: 50px;
   background-color: #c0c0c0;
   border-top: 2px solid white;
 }
@@ -92,7 +117,7 @@ main {
   position: absolute;
   background: #c3c6cd;
   width: 275px;
-  bottom: 60px;
+  bottom: 50px;
   height: 400px;
   border-top: 2px solid #deebf3;
   border-left: 2px solid #deebf3;
@@ -149,10 +174,6 @@ main {
   font-size: 18px;
   color: black;
 }
-.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .taskbar__menu__underline {
-  text-decoration: underline;
-  color: black;
-}
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .taskbar__menu__arrowright {
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
@@ -160,8 +181,78 @@ main {
   margin-left: auto;
   margin-right: 15px;
 }
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__sub {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-color: blue;
+  top: 0px;
+  left: 250px;
+}
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__sub--open {
+  display: flex;
+}
 .taskbar .taskbar__menu--open {
   display: flex;
+}
+
+.window {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-color: #c0c0c0;
+  width: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  border-bottom: 3px solid black;
+  border-right: 3px solid black;
+}
+.window .window__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: #000082;
+  height: 7%;
+}
+.window .window__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.window .window__section .window__welcome {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 15px;
+}
+.window .window__section .window__welcome > div {
+  display: flex;
+  height: 100%;
+}
+.window .window__section .window__welcome > h2 {
+  height: 15%;
+  align-content: center;
+  color: black;
+  font-size: 1.5rem;
+  font-family: "Times Ten", "Times New Roman", serif;
+}
+.window .window__section .window__welcome .window__welcome__message {
+  background-color: #ffffbd;
+  padding: 25px;
+}
+.window .window__section .window__welcome .window__welcome__message p {
+  color: black;
+}
+.window .window__section .window__welcome .window__welcome__btns button {
+  color: black;
 }
 
 *, *:before, *:after {
@@ -174,5 +265,3 @@ main {
   margin: 0;
   overflow: hidden;
 }
-
-/*# sourceMappingURL=style.css.map */
