--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,20 +1,39 @@
 @use "variables";
 
-
-@mixin button-style($bg-color, $color) {
-    background-color: $bg-color;
-    color: $color;
-    padding: $padding;
-    border: none;
-    border-radius: $border-radius;
+@mixin windows95-button($width: null) {
+    display: inline-block;
+    padding: 4px 12px;
+    font-family: 'MS Sans Serif', Tahoma, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    text-decoration: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    background-color: #c0c0c0;
+    border: 2px solid #000;
+    border-top-color: #dfdfdf;
+    border-left-color: #dfdfdf;
+    border-right-color: #808080;
+    border-bottom-color: #808080;
+
+    @if $width {
+        width: $width;
+    }
+
+    &:active {
+        border-top-color: #808080;
+        border-left-color: #808080;
+        border-right-color: #dfdfdf;
+        border-bottom-color: #dfdfdf;
+        background-color: #a0a0a0;
+    }
 
     &:hover {
-        background-color: $hover-color;
+        background-color: #b0b0b0;
     }
 
     &:focus {
-        outline: none;
+        outline: 1px dotted #000;
     }
 }
