--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,10 +201,11 @@ main {
   display: flex;
   flex-direction: column;
   background-color: #c0c0c0;
-  width: 40%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  min-width: 40%;
+  top: 50px;
+  left: 200px;
+  height: 500px;
+  width: 650px;
   border-top: 2px solid white;
   border-left: 2px solid white;
   border-bottom: 3px solid black;
@@ -253,6 +254,48 @@ main {
 }
 .window .window__section .window__welcome .window__welcome__btns button {
   color: black;
+}
+.window .window__section .window__internet__explorer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.window .window__section .window__internet__explorer > img {
+  width: 100%;
+}
+.window .window__section .window__internet__explorer button {
+  display: inline-block;
+  padding: 4px 12px;
+  font-family: "MS Sans Serif", Tahoma, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #c0c0c0;
+  border: 2px solid #000;
+  border-top-color: #dfdfdf;
+  border-left-color: #dfdfdf;
+  border-right-color: #808080;
+  border-bottom-color: #808080;
+  width: 80px;
+  position: absolute;
+  margin-right: 30px;
+  bottom: 10px;
+}
+.window .window__section .window__internet__explorer button:active {
+  border-top-color: #808080;
+  border-left-color: #808080;
+  border-right-color: #dfdfdf;
+  border-bottom-color: #dfdfdf;
+  background-color: #a0a0a0;
+}
+.window .window__section .window__internet__explorer button:hover {
+  background-color: #b0b0b0;
+}
+.window .window__section .window__internet__explorer button:focus {
+  outline: 1px dotted #000;
 }
 
 *, *:before, *:after {
