--- a/scss/windows95.scss
+++ b/scss/windows95.scss
@@ -1,4 +1,5 @@
 @use "variables";
+@use "mixins";
 
 main {
 	width: 100vw;
@@ -246,10 +247,14 @@ main {
     display: flex;
     flex-direction: column;
     background-color: variables.$windows95-gray-color;
-    width: 40%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    min-width: 40%;
+    top: 50px;
+    left: 200px;
+    height: 500px;
+    width: 650px;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
     border-top: 2px solid white;
     border-left: 2px solid white;
     border-bottom: 3px solid black;
@@ -309,6 +314,24 @@ main {
                 button {
                     color: black;
                 }
+            }
+        }
+
+        .window__internet__explorer {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+
+            > img {
+                width: 100%;
+                // object-fit: cover;
+            }
+
+            button {
+                @include mixins.windows95-button(80px);
+                position: absolute;
+                margin-right: 30px;
+                bottom: 10px;
             }
         }
     }
