--- a/views/windows95.html
+++ b/views/windows95.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Windows95</title>
-		<link rel="stylesheet" href="../assets/css/style.css" type="text/css">
+		<link rel="stylesheet" href="/css/style.css" type="text/css">
 	</head>
 	<body>
-		<main>
+		<main id="windows95">
 			<section class="desktop">
 
 				<div class="desktop__shortcut" data-window="window-welcome">
@@ -167,10 +167,10 @@
 			</section>
 		</main>
 	</body>
-	<script src="../assets/js/managers/WindowManager.js"></script>
-	<script src="../assets/js/managers/TaskbarManager.js"></script>
-	<script src="../assets/js/managers/StartMenuManager.js"></script>
-	<script src="../assets/js/managers/DesktopManager.js"></script>
-	<script src="../assets/js/managers/DateTimeManager.js"></script>
-	<script src="../assets/js/main.js"></script>
+	<script src="/js/windows95/WindowManager.js"></script>
+	<script src="/js/windows95/TaskbarManager.js"></script>
+	<script src="/js/windows95/StartMenuManager.js"></script>
+	<script src="/js/windows95/DesktopManager.js"></script>
+	<script src="/js/windows95/DateTimeManager.js"></script>
+	<script src="/js/windows95/main.js"></script>
 </html>
