--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,9 +1,9 @@
 @use "variables";
 
 
-@font-face {
-	font-family: "MS Sans Serif";
-	src: url("#{variables.$font-path}ms-sans-serif.woff2") format("woff2");
-	font-weight: normal;
-	font-display: swap;
-}
+// @font-face {
+// 	font-family: "MS Sans Serif";
+// 	src: url("#{variables.$font-path}ms-sans-serif.woff2") format("woff2");
+// 	font-weight: normal;
+// 	font-display: swap;
+// }
