--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,7 +9,7 @@ $red-color: #d20404;
 // Font
 $font-family: "MS Sans Serif", Tahoma, Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
-$font-path: "assets/fonts/";
+// $font-path: "../assets/fonts/";
 
 $font-family-terminal: 'MS PGothic', 'ＭＳ Ｐゴシック', Georgia, Arial, Helvetica, sans-serif;
 
