--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "MS Sans Serif";
+  src: url("../assets/fonts/ms-sans-serif.woff2") format("woff2");
+  font-weight: bold;
+  font-display: swap;
+}
 #windows95 {
   width: 100vw;
   height: 100vh;
@@ -312,12 +318,6 @@
   outline: 1px dotted #000;
 }
 
-@font-face {
-  font-family: "MS Sans Serif";
-  src: url("/assets/fonts/ms-sans-serif.woff2") format("woff2");
-  font-weight: normal;
-  font-display: swap;
-}
 #ibm {
   display: flex;
   justify-content: center;
